syntax = "proto3";

message Feature {
    enum Type {
        HAS_GAZETTEER_HITS = 0;
        NGRAM_MATCHER = 1;
        IS_FIRST_WORD = 2;
        IS_LAST_WORD = 3;
        IS_CAPITALIZED = 4;
        IS_DATE = 5;
        CONTAINS_POSSESSIVE = 6;
        GET_MESSAGE_LENGTH = 7;
        CONTAINS_DIGITS = 8;
    }

    enum Domain {
        SHARED_SCALAR = 0;
        SHARED_VECTOR = 1;
    }

    message Argument {
        oneof value {
            string gazetteer = 1;
            string str = 2;
            double scalar = 3;
            bool boolean = 4;
        }
    }

    Type type = 1;
    Domain domain = 2;
    repeated Argument arguments = 3;
}
